--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
 <body>
     <div id="editor" style="height: 90vh;"></div>
     <script src="main.js"></script>
+    <select id="languageSelector">
+    <option value="javascript">JavaScript</option>
+    <option value="html">HTML</option>
+    <option value="css">CSS</option>
+</select>
 </body>
 </html>
