--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             background-color: #1e1e1e;
         }
         #editor {
-            width: 80%;
+            width: 90%;  /* Make the editor wider */
             height: 60vh;
             background-color: #1e1e1e;
             border: 2px solid #333;
             border-radius: 8px;
         }
         #output {
-            width: 80%;
+            width: 90%;
             color: white;
             padding: 10px;
             background-color: #333;
